src/objects/ISSP_ASD_Users__c.object
<CustomObject>
    <fields>
        <fullName>ASD_Address__c</fullName>
        <label>ASD Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Country__c</fullName>
        <label>ASD Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_First_Name__c</fullName>
        <label>ASD First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_IATA_Code__c</fullName>
        <label>ASD IATA Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Last_Name__c</fullName>
        <label>ASD Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Mobile_Phone__c</fullName>
        <label>ASD Mobile Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Phone__c</fullName>
        <label>ASD Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Postal_Code__c</fullName>
        <label>ASD Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Salutation__c</fullName>
        <label>ASD Salutation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_User_Code__c</fullName>
        <label>ASD User Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_User_Type__c</fullName>
        <label>ASD User Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASD_Validated_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASD Validated Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_IATA_Code__c</fullName>
        <formula>Contact__r.Account.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ISO_Country_Code__c</fullName>
        <formula>Contact__r.Account.IATA_ISO_Country__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Contact__r.Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Contact__r.Account.Region_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT(Contact__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ISSP ASD Users</relationshipLabel>
        <relationshipName>ISSP_ASD_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_New_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created New Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IFAP_Contact__c</fullName>
        <formula>Contact__r.Financial_Assessment_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFAP Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Create_New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Create New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Portal_Status__c</fullName>
        <formula>TEXT( Contact__r.User_Portal_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Portal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ISSP_ASD_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ISSP ASD Users</label>
    <nameField>
        <displayFormat>ASDUser-{000000}</displayFormat>
        <label>ISSP ASD Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISSP ASD Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>